--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
   "server/**/*.js": ["npm run prettier:server", "npm run lint:server"],
-  "client/**/*.{js,jsx}": ["npm run prettier:client", "npm run lint:client"]
+  "client/**/*.{ts,tsx}": ["npm run prettier:client", "npm run lint:client"]
 }
