--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "expo": "~51.0.6",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -21,6 +22,7 @@
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-svg": "^15.2.0"
