--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -17,6 +18,7 @@
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.11.4",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
