--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.2.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
