--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.10.0",
