--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.74.1",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
