--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "expo": "~51.0.6",
+    "expo-image-picker": "^15.0.5",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.11.4",
@@ -24,8 +25,6 @@
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
     "react-native-confirmation-code-field": "^7.4.0",
-    "react-native-gifted-chat": "^2.4.0",
-    "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
