--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@types/validator": "^13.11.10",
     "axios": "^1.6.8",
     "expo": "~51.0.6",
     "expo-font": "^12.0.6",
@@ -26,11 +27,13 @@
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
     "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-svg": "^15.2.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
