--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv-expand": "^11.0.6",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
