--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.1",
