--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,9 @@
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
     "express": "^4.19.2",
-    "express-validator": "^7.1.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
