--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "expo-image-picker": "^15.0.5",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "formik": "^2.4.6",
     "i18next": "^23.11.4",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.7.2",
@@ -33,7 +34,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-svg": "^15.2.0",
     "socket.io-client": "^4.7.5",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
