--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@types/validator": "^13.11.10",
     "axios": "^1.6.8",
     "expo": "~51.0.6",
+    "expo-av": "^14.0.5",
+    "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.6",
     "expo-image-picker": "^15.0.5",
     "expo-linear-gradient": "^13.0.2",
