--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
+    "crypto-js": "^3.3.0",
     "expo": "~51.0.6",
     "expo-av": "^14.0.5",
     "expo-file-system": "^17.0.1",
@@ -23,6 +24,7 @@
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "i18next": "^23.11.4",
+    "jsencrypt": "^3.3.2",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
@@ -41,6 +43,7 @@
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.2.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "eslint": "^8.57.0",
